set color scheme, set skeleton of portfolio

--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
-"Hello World" 
+<!DOCTYPE html>
+<html data-nu-icons='ion' data-nu-scheme-is='dark' data-nu-contrast-is='more' data-nu-focus-visible='' data-nu-contrast='more' data-nu-scheme='dark' lang='en'>
+  <head>
+    <title>Emma Grey</title>
+    <link rel="stylesheet" href="style.css">
+  </head>
+  <body>
+    <nav id="navbar">
+      <a href="#about">about</a>
+      <a href="#">projects</a>
+      <a href="#">experience</a>
+    </nav>
+    <header>
+      <h1>Emma Grey</h1>
+      <p>web developer, musician.</p>
+    </header>
+    <div id="about">
+      <h2>About</h2>
+      <p>Emma was born poopoopoo yeah music major clarinet should i mention scleroderma? lolz idk weiofjasdofndfdkfj</p>
+    </div>
+  </body>
+</html>
