updated about and projects section

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html data-nu-icons='ion' data-nu-scheme-is='dark' data-nu-contrast-is='more' data-nu-focus-visible='' data-nu-contrast='more' data-nu-scheme='dark' lang='en'>
+<html>
   <head>
     <title>Emma Grey</title>
     <link rel="stylesheet" href="style.css">
@@ -7,7 +7,7 @@
   <body>
     <nav id="navbar">
       <a href="#about">about</a>
-      <a href="#">projects</a>
+      <a href="#projects">projects</a>
       <a href="#">experience</a>
     </nav>
     <header>
@@ -16,7 +16,16 @@
     </header>
     <div id="about">
       <h2>About</h2>
-      <p>Emma was born poopoopoo yeah music major clarinet should i mention scleroderma? lolz idk weiofjasdofndfdkfj</p>
+      <p>Emma grew up playing the clarinet through middle school and high school, so she followed her dream to go to music school for clarinet performance. After receiving a bachelor of music degree in 2019, Emma realized she could not make a living by playing the clarinet. She needed another plan. Luckily, Emma learned she was passionate about coding after taking an intro to computer science class during her undergraduate career. </p>
+    </div>
+    <div id="projects">
+      <h2>Projects</h2>
+      <div class='grid'>
+        <a href="http://emgrey02.github.io/google-homepage"><img src='images/google-homepage.png' alt="preview of my google homepage recreation"></a>
+        <a href="http://emgrey02.github.io/rock_paper_scissors"><img src="images/rock-paper-scissors.png" alt="preview of my rock, paper, scissors game"></a>
+        <a href="http://emgrey02.github.io/etch-a-sketch"><img src="images/etch-a-sketch.png"></a>
+        <a href="http://emgrey02.github.io/calculator"><img src="images/calculator.png"></a>
+      </div>
     </div>
   </body>
 </html>
