Updates projects section and background

--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Emma Grey</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
+    <div id="background">
     <nav id="navbar">
       <a href="#about">about</a>
       <a href="#projects">projects</a>
@@ -14,18 +16,153 @@
       <h1>Emma Grey</h1>
       <p>web developer, musician.</p>
     </header>
+    </div>
     <div id="about">
       <h2>About</h2>
-      <p>Emma grew up playing the clarinet through middle school and high school, so she followed her dream to go to music school for clarinet performance. After receiving a bachelor of music degree in 2019, Emma realized she could not make a living by playing the clarinet. She needed another plan. Luckily, Emma learned she was passionate about coding after taking an intro to computer science class during her undergraduate career. </p>
+      <p>Emma grew up playing the clarinet through middle school and high school, so she followed her dream to go to music school for clarinet performance. After receiving a Bachelor of Music degree from Ithaca College in 2019, Emma realized she could not make a living by playing the clarinet. She needed another plan. Luckily, Emma learned she was passionate about coding after taking an Intro to Computer Science class during her undergraduate studies. It is there she learned the basics of coding with Python. Since graduating, Emma delved into learning web development through free online courses like Harvard's CS50, <i>freecodecamp</i>, and The Odin Project. Recently Emma began working towards an Associate of Applied Science degree in Interface Design and Web Development. </p>
     </div>
     <div id="projects">
       <h2>Projects</h2>
       <div class='grid'>
-        <a href="http://emgrey02.github.io/google-homepage"><img src='images/google-homepage.png' alt="preview of my google homepage recreation"></a>
-        <a href="http://emgrey02.github.io/rock_paper_scissors"><img src="images/rock-paper-scissors.png" alt="preview of my rock, paper, scissors game"></a>
-        <a href="http://emgrey02.github.io/etch-a-sketch"><img src="images/etch-a-sketch.png"></a>
-        <a href="http://emgrey02.github.io/calculator"><img src="images/calculator.png"></a>
+        <div class='container'>
+          <img src='images/google-homepage.png' alt="" title="google homepage project" />
+          <div class="shadow"></div>
+          <div class="overlay">
+            <div class="text-container">
+              <div class="text">Google Homepage Project</div>
+              <div class="link-container">
+                <a class="google" href="http://github.com/emgrey02/google-homepage" target="_blank">
+                  <div class="text">Code</div>
+                </a>
+                <a class='google' href="http://emgrey02.github.io/google-homepage" target="_blank">
+                  <div class="text">Live Preview</div>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class='container'>
+          <img src="images/rock-paper-scissors.png" alt="preview of my rock, paper, scissors game"/>
+          <div class="shadow"></div>
+          <div class="overlay">
+            <div class="text-container">
+              <div class="text">Rock, Paper, Scissors Game</div>
+              <div class="link-container">
+                <a class='rps' href="http://github.com/emgrey02/rock_paper_scissors" target="_blank">              
+                  <div class="text">Code</div>
+                </a>
+                <a class='rps' href="http://emgrey02.github.io/rock_paper_scissors" target="_blank">
+                  <div class="text">Live Preview</div>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class='container'>
+          <img src="images/etch-a-sketch.png" alt="preview of etch-a-sketch game "/>
+          <div class="shadow"></div>
+          <div class="overlay">
+            <div class="text-container">
+              <div class="text">Etch-A-Sketch</div>
+              <div class="link-container">
+                <a class="etch" href="http://github.com/emgrey02/etch-a-sketch" target="_blank">
+                  <div class="text">Code</div>
+                </a>
+                <a class="etch" href="http://emgrey02.github.io/etch-a-sketch" target="_blank">
+                  <div class="text">Live Preview</div>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class='container'>
+          <img src="images/calculator.png" alt="preview of a calculator"/>
+          <div class="shadow"></div>
+          <div class="overlay">
+            <div class="text-container">
+              <div class="text">Calculator</div>
+              <div class="link-container">
+                <a class="calc" href="http://github.com/emgrey02/calculator" target="_blank">
+                  <div class="text">Code</div>
+                </a>
+                <a class="calc" href="http://emgrey02.github.io/calculator" target="_blank">
+                  <div class="text">Live Preview</div>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class='container'>
+          <img src="images/documentation.png" alt="preview of documentation page"/>
+          <div class="shadow"></div>
+          <div class="overlay">
+            <div class="text-container">
+              <div class="text">Technical Documentation Page</div>
+              <div class="link-container">
+                <a class="tech" href="http://github.com/emgrey02/technical-documentation" target="_blank">
+                  <div class="text">Code</div>
+                </a>
+                <a class="tech" href="http://emgrey02.github.io/technical-documentation" target="_blank">
+                  <div class="text">Live Preview</div>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class='container'>
+          <img src="images/product.png" alt="preview of product landing page"/>
+          <div class="shadow"></div>
+          <div class="overlay">
+            <div class="text-container">
+              <div class="text">Product Landing Page</div>
+              <div class="link-container">
+                <a class="tech" href="http://github.com/emgrey02/product-landing-page" target="_blank">
+                  <div class="text">Code</div>
+                </a>
+                <a class="tech" href="http://emgrey02.github.io/product-landing-page" target="_blank">
+                  <div class="text">Live Preview</div>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class='container'>
+          <img src="images/survey.png" alt="preview of survey page"/>
+          <div class="shadow"></div>
+          <div class="overlay">
+            <div class="text-container">
+              <div class="text">Survey</div>
+              <div class="link-container">
+                <a class="tech" href="http://github.com/emgrey02/survey-page" target="_blank">
+                  <div class="text">Code</div>
+                </a>
+                <a class="tech" href="http://emgrey02.github.io/survey-page" target="_blank">
+                  <div class="text">Live Preview</div>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class='container'>
+          <img src="images/tribute-page.png" alt="preview of tribute page"/>
+          <div class="shadow"></div>
+          <div class="overlay">
+            <div class="text-container">
+              <div class="text">Tribute Page</div>
+              <div class="link-container">
+                <a class="tech" href="http://github.com/emgrey02/tribute-page" target="_blank">
+                  <div class="text">Code</div>
+                </a>
+                <a class="tech" href="http://emgrey02.github.io/tribute-page" target="_blank">
+                  <div class="text">Live Preview</div>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
+    <a href="http://www.freepik.com">Designed by rawpixel.com / Freepik</a>
   </body>
+  <script src='script.js'></script>
 </html>
