updates info button animation

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <style>html{visibility: hidden; opacity: 0;}</style>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Emma Grey</title>
     <link rel="stylesheet" href="style.css">
@@ -13,8 +14,8 @@
       <a href="#">experience</a>
     </nav>
     <header>
-      <h1>Emma Grey</h1>
-      <p>web developer, musician.</p>
+      <h1 id='name'>Emma Grey</h1>
+      <p id='job'>web developer, musician.</p>
     </header>
     </div>
     <div id="about">
@@ -22,7 +23,11 @@
         <img src="images/emmaclarinet.jpg"/>
         <div class='about-stuff'>
           <h2>About</h2>
-          <p>Emma grew up playing the clarinet through middle school and high school, so she followed her dream to go to music school for clarinet performance. After receiving a Bachelor of Music degree from Ithaca College in 2019, Emma realized she could not make a living by playing the clarinet. She needed another plan. Luckily, Emma learned she was passionate about coding after taking an Intro to Computer Science class during her undergraduate studies. It is there she learned the basics of coding with Python. Since graduating, Emma delved into learning web development through free online courses like Harvard's CS50, <i>freecodecamp</i>, and The Odin Project. Recently Emma began working towards an Associate of Applied Science degree in Interface Design and Web Development. </p>
+          <p>Hey there! My name is Emma (she/her).</p>
+          <p>I am beginner web developer based in New Jersey. I aim to create beautiful, responsive & accessible web applications for humans.</p>
+          <p>Before I built websites, I played the clarinet. A lot. I even have a bachelor's degree in clarinet performance. I had a great time but a career in performance isn't plausible for me anymore! My passion for music will never go away, but now I can pursue another passion of mine: coding! I've been hooked ever since I took an Intro to Computer Science class during my music degree.</p>
+          <p>Thanks for coming to my portfolio website! If you want to contact me please email me at emgrey02@gmail.com. Love you!</p>
+          <!-- <iframe src="https://open.spotify.com/embed/track/5tGZQwvvkYR68maK85XLXh" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe> -->
         </div>
       </div>
     </div>
@@ -175,7 +180,7 @@
           </div>
         </div>
       </div>
-      <div id="info-text">
+      <div class="animation" id="info-text">
         <h2>my projects</h2>
         <b><hr></b>
         <p>click 'info' for more information about each project!</p>
