--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
         <div class='about-stuff'>
           <h2>About</h2>
           <p>Hey there! My name is Emma (she/her).</p>
-          <p>I am beginner web developer based in New Jersey. I aim to create beautiful, responsive & accessible web applications for humans.</p>
-          <p>Before I built websites, I played the clarinet. A lot. I even have a bachelor's degree in clarinet performance. I had a great time but a career in performance isn't plausible for me anymore! My passion for music will never go away, but now I can pursue another passion of mine: coding! I've been hooked ever since I took an Intro to Computer Science class during my music degree.</p>
+          <p>I am a beginner web developer based in New Jersey. My goal is to build beautiful, simple, and accessible websites for everyone.</p>
+          <p>Before I built websites, I played the clarinet and other woodwind instruments. While I loved getting my bachelor's degree in music performance, I realize now a career in music isn't plausible for me anymore. My passion for music will never go away, but now I can pursue another passion of mine: coding! I've been hooked ever since I took an Intro to Computer Science class during my music degree.</p>
           <p>Thanks for coming to my portfolio website! If you want to contact me please email me at emgrey02@gmail.com. Love you!</p>
           <!-- <iframe src="https://open.spotify.com/embed/track/5tGZQwvvkYR68maK85XLXh" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe> -->
         </div>
