--- a/index.html
+++ b/index.html
@@ -209,5 +209,5 @@
     <a href="http://www.freepik.com">Designed by rawpixel.com / Freepik</a>
 
   </body>
-  <script src='script.js'></script>
+  <script src="script.js"></script>
 </html>
