attempt at fixing background

--- a/index.html
+++ b/index.html
@@ -195,6 +195,11 @@
       </div>
     </section>
 
+    <footer>
+      <p>Photo by <a href="https://unsplash.com/@markusspiske?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Markus Spiske</a> on <a href="https://unsplash.com/s/photos/trees-up-sky?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
+      </p>
+    </footer>
+
   </body>
   
 </html>
