fixes grid images

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <h2>About</h2>
         <p>Hey there! My name is Emma (she/her).</p>
         <p>I am a beginner web developer based in New Jersey. My goal is to build beautiful, simple, and accessible websites for everyone.</p>
-        <p>Before I built websites, I played the clarinet and other woodwind instruments. While I loved getting my bachelor's degree in music performance, I realize now a career in music isn't plausible for me anymore. My passion for music will never go away, but now I can pursue another passion of mine: coding! I've been hooked ever since I took an Intro to Computer Science class during my music degree.</p>
+        <p>Before I built websites, I played the clarinet and other woodwind instruments. While I loved getting my bachelor's degree in music performance, I realize now a career in music isn't plausible for me anymore. My passion for music will never go away, but now I can pursue another passion of mine: coding! I've been hooked ever since I took an Intro to Computer Science class while working on my music degree.</p>
         <p>Thanks for coming to my portfolio website! If you want to contact me please email me at emgrey02@gmail.com. Love you!</p>
       </div>
     </section>
@@ -196,8 +196,10 @@
     </section>
 
     <footer>
-      <p>Photo by <a href="https://unsplash.com/@markusspiske?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Markus Spiske</a> on <a href="https://unsplash.com/s/photos/trees-up-sky?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
-      </p>
+      <div id="attributes">
+        <p>Photo by <a href="https://unsplash.com/@markusspiske?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Markus Spiske</a> on <a href="https://unsplash.com/s/photos/trees-up-sky?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
+        </p>
+      </div>
     </footer>
 
   </body>
