updates to mobile menu

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <header>
       <div id="img-container">
-        <img src="images/squid-profile-colors.png" alt="squid with headphones logo">
+        <img src="images/squid-profile-colors.png" alt="purple spotted squid">
       </div>
       <div id="navbar">
         <ul class="menu-buttons">
