changed logo image

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <header>
       <div id="img-container">
-        <img src="images/squid-profile-colors.png" alt="purple spotted squid">
+        <img src="images/squidoo2.svg" alt="purple spotted squid">
       </div>
       <div id="navbar">
         <ul class="menu-buttons">
@@ -38,14 +38,16 @@
     </header>
     
     <section id="main">
-      <h1 id='name'>Emma Grey</h1>
-      <h2 id='job'>web developer, musician.</h2>
+      <div class="main-container">
+        <h1 id='name'>Emma Grey</h1>
+        <h2 id='job'>web developer, musician.</h2>
+      </div>
     </section>
 
     <section id="about">
       <img src="images/emmaclarinet.jpg" alt="emma playing the clarinet"/>
       <div class='about-stuff'>
-        <h2>About</h2>
+        <h2>about</h2>
         <p>Hey there! My name is Emma (she/her).</p>
         <p>I am a beginner web developer based in New Jersey. My goal is to build beautiful, simple, and accessible websites for everyone.</p>
         <p>Before I built websites, I played the clarinet and other woodwind instruments. While I loved getting my bachelor's degree in music performance, I realize now a career in music isn't plausible for me anymore. My passion for music will never go away, but now I can pursue another passion of mine: coding! I've been hooked ever since I took an Intro to Computer Science class while working on my music degree.</p>
@@ -54,7 +56,7 @@
     </section>
 
     <section id="projects">
-      <h2>Projects</h2>
+      <h2>projects</h2>
       <div id="project-container">
         <div class='grid'>
 
