--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
           <div class="filters">
             <button class="option" id="label-one">HTML/CSS</button>
             <button class="option" id="label-two">Javascript</button>
-            <button class="option color" id="label-three">All</button>
+            <button class="option" id="label-three">All</button>
           </div>
           <div class="animation" id="info-text">
             <h3>my projects</h3>
