changed color scheme once again

--- a/index.html
+++ b/index.html
@@ -184,8 +184,8 @@
         <div class="right-container">
           <div class="filters">
             <button class="option" id="label-one">HTML/CSS</button>
-            <button class="option" id="label-two">Javascript</button>
-            <button class="option" id="label-three">All</button>
+            <button class="option" id="label-two">javascript</button>
+            <button class="option" id="label-three">all</button>
           </div>
           <div class="animation" id="info-text">
             <h3>my projects</h3>
