changed color scheme again

--- a/index.html
+++ b/index.html
@@ -198,10 +198,7 @@
     </section>
 
     <footer>
-      <div id="attributes">
-        <p>Photo by <a href="https://unsplash.com/@markusspiske?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Markus Spiske</a> on <a href="https://unsplash.com/s/photos/trees-up-sky?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
-        </p>
-      </div>
+      <div id="attributes"></div>
     </footer>
 
   </body>
