adds new completed project

--- a/index.html
+++ b/index.html
@@ -179,7 +179,24 @@
               </div>
             </div>
           </div>
+
+          <div class='container HTML Javascript'>
+            <img src="images/library.png" alt="preview of library page"/>
+            <div class="shadow"></div>
+            <div class="overlay">
+              <div class="text-container">
+                <h3>Library App</h3>
+                <a id="tribute" class="info" href="#projects">Info</a>
+                <div class="link-container">
+                  <a href="http://github.com/emgrey02/library-app" target="_blank">Code</a>
+                  <a href="http://emgrey02.github.io/library-app" target="_blank">Live Preview</a>
+                </div>
+              </div>
+            </div>
+          </div>
+
         </div>
+
 
         <div class="right-container">
           <div class="filters">
