--- a/index.html
+++ b/index.html
@@ -24,9 +24,7 @@
     </div>
 
     <!-- NORMAL NAVIGATION-->
-    <nav id='main-nav' aria-labelledby='navigation'>
-      <div id='navigation'>navigation:</div>
-      <hr>
+    <nav id='main-nav' aria-label='Main Menu'>
       <ul id='main'>
         <li><a href='#about'>about</a></li>
         <li><a href='#skills'>skills</a></li>
